--- a/shippable.yml
+++ b/shippable.yml
@@ -2,7 +2,15 @@ build_image: magwas/edemotest:zentabuild
 language: python
 python:
   - 2.7
-script:
-- tools/script
-- tools/upload
+
+build:
+  cache: true
+  cache_dir_list:
+    - ~/.m2
+  ci:
+    - tools/script
+  on_success:
+    - tools/upload
+  on_failure:
+    - tools/upload
 
